modify code to match svg path

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <p class="cont-index">A Missão Ambiental é uma associação civil sem fins lucrativos que cria espaços de preservação e convivência para a comunidade de vida na Terra buscando garantir a otimização dos recursos ambientais com produção de alimentos e regeneração do solo, incentiva a participação dos moradores do entorno e busca parceiros locais para realizar suas atividades. Além disso, conta com um amplo espaço cedido pela iniciativa privada onde são desenvolvidas atividades de educação ambiental, horta comunitária, agroecologia, viveiro de mudas nativas para as ações de plantios, mutirões (sempre agendados e divulgados nas redes sociais), cursos e oficinas. Tem um quadro de voluntários e parceiros como: SOS Abelhas sem Ferrão, Sempre Sustentável, Escola Comunitária, OHquidea, Aquário de São Paulo, ICC (Instituto Cristovão Colombo), FUNSAI (Fundação Nossa Senhora Auxiliadora do Ipiranga), CADES Ipiranga (Conselho Regional do Meio Ambiente, Desenvolvimento Sustentável e Cultura de Paz da Subprefeitura Ipiranga), Muda Ipiranga, entre outros.</p>
     </div> 
     <footer class="rodape-principal">
-        <a target="_blank" href="https://www.instagram.com/missao.ambiental/" class="instagram redes"><img src="./images/instagram 1.png" alt="Instagram"></a>
-        <a target="_blank" href="https://www.facebook.com/missaoambiental.org/" class="facebook redes"><img src="./images/facebook 1.png" alt="Facebook"></a>
+        <a target="_blank" href="https://www.instagram.com/missao.ambiental/" class="instagram redes"><img src="./images/instagram 1.svg" alt="Instagram"></a>
+        <a target="_blank" href="https://www.facebook.com/missaoambiental.org/" class="facebook redes"><img src="./images/facebook 1.svg" alt="Facebook"></a>
         <div class="mapa">
             <div class="mapa-icone">
                 <a target="_blank" href="https://maps.app.goo.gl/GbR9jx4g4LoP4dJ7A">
-                <img src="./images/mapa 1.png" alt="Mapa">
+                <img src="./images/mapa 1.svg" alt="Mapa">
                 </a>
              </div>
             <p>missaoambiental.org@gmail.com | Rua Moreira de Godói, 01 - Vila São José - São Paulo, SP | (11) 96677-6565
