change icon to high quality svg

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <main class="inicio">
     <header class="topo">
-        <a href="index.html" class="logo-amb"><img src="images/logo-amb.png">Missão Ambiental</a>
+        <a href="index.html" class="logo-amb"><img src="images/logo-amb.svg">Missão Ambiental</a>
         <button aria-expanded="false" aria-label="menu" class="icone-menu menu-layout">☰</button>
         <nav class="cabecalho">
             <button type="button" class="icone-menu fechar-menu" aria-expanded="false" aria-label="Close">×</button>
