change icon to high quality svg

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </main>
     <div id="voluntario">
         <p class="voluntariar">Se você deseja se voluntariar e nos ajudar, clique no link abaixo:</p>
-        <a target="_blank" href="#"><img class="voluntario-btn" src="images/voluntariado.png" alt="Voluntário"></a>
+        <a target="_blank" href="#"><img class="voluntario-btn" src="images/voluntariado.svg" alt="Voluntário"></a>
     </div>
     <div id="espaco">
         <p class="titulo">Nosso Espaço</p>
@@ -134,7 +134,7 @@
     <div class="agendar2">
         <br><br> 
     <div id="vis-cont1"> 
-        <img src="./images/logo.png" alt="Missão Ambiental" class="logo"> 
+        <img src="./images/logo.svg" alt="Missão Ambiental" class="logo"> 
         <p class="enderecos">|Rua Moreira de Godói, 01 - <br> 
         Vila São José - <u>São</u> Paulo, SP<br> 
         <br> 
