feat: acessibilidade icon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
                 <!-- <li><a href="projetos.html" class="links">Projetos</a></li> -->
                 <li><a href="#equipe">Equipe</a></li>
                 <li><a href="#agendar">Agendar</a></li>
-                <li><a href="#vis-cont1">Contatos<img src="images/contatos 1.png"></a></li>
+                <li><a href="#vis-cont1">Contatos</a></li>
+                <li class="acessibilidade2">
+                    <a class="acessibilidade">
+                        <img src="images/acessibilidade.svg">
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
