add linktree icon to footer

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <footer class="rodape-principal">
         <a target="_blank" href="https://www.instagram.com/missao.ambiental/" class="instagram redes"><img src="./images/instagram 1.svg" alt="Instagram"></a>
         <a target="_blank" href="https://www.facebook.com/missaoambiental.org/" class="facebook redes"><img src="./images/facebook 1.svg" alt="Facebook"></a>
+        <a target="_blank" href="https://linktr.ee/missaoambiental" class="linktree redes"><img src="images/Linktree.svg"></a>
         <div class="mapa">
             <div class="mapa-icone">
                 <a target="_blank" href="https://maps.app.goo.gl/GbR9jx4g4LoP4dJ7A">
