fix link covering width

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </main>
     <div id="voluntario">
         <p class="voluntariar">Se você deseja se voluntariar e nos ajudar, clique no link abaixo:</p>
-        <a target="_blank" href="#"><img class="voluntario-btn" src="images/voluntariado.svg" alt="Voluntário"></a>
+        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe_r5UnINtsEyfoTkQUBshW4lwC5aIqGFsjzSh8NRTZDyoY7w/viewform?pli=1"><img class="voluntario-btn" src="images/voluntariado.svg" alt="Voluntário"></a>
     </div>
     <div id="espaco">
         <p class="titulo">Nosso Espaço</p>
