adjust carosel img class

--- a/index.html
+++ b/index.html
@@ -78,22 +78,26 @@
             <h1>ORQUIDÁRIO</h1>
             <p class="col-5 carrossel-texto">O orquidário é um projeto desenvolvido em parceria com o Ohquidea que busca resgatar orquídeas e replantá-las em outros espaços. Dessa maneira, o orquidário da Missão Ambiental foi estruturado para receber as orquídeas descartadas. Entre as espécies destacam a Wanda, Cymbidium, Cattleya e Phalaenopsis.</p>
             <img src="./images/jardim.png" alt="" class="horizontal">
+            <img class="vertical"src="images/blueberry-2686266_1280 1.png">
         </div>
         <div class="row carrossel-item">
             <h1>OFICINAS DE EDUCAÇÃO AMBIENTAL</h1>
             <p class="col-5 carrossel-texto">As oficinas de educação ambiental são momentos organizados para expor, discutir e sensibilizar as pessoas sobre as temáticas relacionadas ao meio ambiente. Entre as oficinas foram realizadas sobre PANCs – Plantas Alimentícias Não Convencionais, ninho-isca para abelhas nativas sem ferrão, orquídeas.</p>
-            <img src="./images/oficina.png" alt="" class="horizontal">
+            <img class="horizontal" src="images/oficina.png">
+            <img class="vertical" src="images/oficinasvertical.png">
         </div>
         <div class="row carrossel-item">
             <h1>CAPTAÇÃO DE ÁGUA DE CHUVA:</h1>
             <p class="col-5 carrossel-texto">O sistema de captação de água pluvial foi implantado pelo parceiro Edison Urbano da Sempre Sustentável com viés de reaproveitar a água de chuva coletada pelo beiral do vizinho. A água fica armazenada na bombona de 200 L e o excesso é direcionado para os canteiros de hortaliças. Além disso, é utilizado para lavar as mãos, rega da horta educativa comunitária e armanezado em recipientes plásticos.</p>
-            <img src="./images/captacao.png" alt="" class="horizontal">
+            <img class="horizontal" src="images/captacao.png">
+            <img class="vertical" src="images/captacaoagua.png">
         </div>
         <div class="row carrossel-item">
             <h1>HORTA EDUCATIVA COMUNITÁRIA:</h1>
             <p class="col-5 carrossel-texto">  A horta educativa comunitária foi idealizada para proporcionar experiências sensoriais, alimentação orgânica e dinamismo. É uma horta suspensa confeccionada com caixas de isopor e mesas de madeiras remontadas de paletes. A terra e o substrato é uma produção orgânica do espaço oriundo da compostagem comunitária.</p>
             <p class="col-5 carrossel-texto">Entre as hortaliças produzidas nas caixas estão vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló. feijão preto, erva cidreira, jambu, coentro-selvagem, entre outros.</p>
-            <img src="./images/horta.png" alt="" class="horizontal">
+            <img class="horizontal" src="images/horta.png">
+            <img class="vertical" src="images/horta123.png">
         </div>
         <div class="row carrossel-item">
             <h1>COMPOSTAGEM</h1>
@@ -101,17 +105,20 @@
                 A compostagem termofílica é aquela que agrega maior número de pessoas para apoio, controle da quantidade de resíduos e da temperatura das leiras.
                 A compostagem em valetas é a mais utilizada e recomendada para áreas verdes compactadas. O resíduo orgânico é depositado em um buraco superficial e depois coberto em canteiros de árvores e vegetação que se deseja nutrir.
                 A vermicompostagem é a compostagem empregada em recipientes com ajuda das minhocas californianas (Eisenia fétida) para decomposição de resíduos orgânicos. O processo prevê a coleta de biofertilizante e reaproveitamento do composto líquido.</p>
-            <img src="./images/compostagem.png" alt="" class="horizontal">
+                <img class="horizontal" src="images/compostagem.png">
+                <img class="vertical" src="images/compostagem123.png">
         </div>
         <div class="row carrossel-item">
             <h1>ÁRVORES NATIVAS:</h1>
             <p class="col-5 carrossel-texto">Ao longo do período de 5 anos foram plantadas algumas espécies nativas de Mata Atlântica e Cerrado Paulista para reflorestamento da área degradada. Entre elas estão espécies como Jaracatiá (Jacaratia spinosa), Cambuci (Campomanesia phaea), Lobeira (Solanum lycocarpum), Araucária (Araucaria angustifolia), Pau Jacaré (Piptadenia gonoacantha), Bacupari (Garcinia gardneriana), Juçara (Euterpe edulis), Embaúba Prateada (Cecropia hololeuca), Cereja-do-Rio-Grande (Eugenia involucrata), Pitanga Preta (Eugenia uniflora), Cambucá (Plinia edulis), Embira-de-Sapo (Lonchocarpus muehlbergianus), Uvaia (Eugenia pyriformis), Jequitibá Branco (Cariniana estrellensis), Angico Vermelho (Anadenanthera macrocarpa) Ingá-do-Brejo (Inga uruguensis), Cabeludinha (Myrciaria glazioviana), entre outras.</p>
-            <img src="./images/arvores.png" alt="" class="horizontal">
+            <img class="vertical" src="images/arvoresnativasdireita.png">
+            <img class="verticalarvore" src="images/arvoresnativas esquerda.png">
         </div>
         <div class="row carrossel-item">
             <h1>ABELHAS SEM FERRÃO</h1>
             <p class="col-5 carrossel-texto">A Missão Ambiental em parceria com o SOS Abelhas Sem Ferrão ajuda a preservar e conscientizar sobre as abelhas nativas. O espaço conta com diversas espécies de abelhas sem ferrão como mirim droryana (Plebeia droryana), jataí (Tetragonisca angustula), arapuá (Trigona spinipes), boca-de-sapo (Partamona helleri), mandaguari (Scaptotrigona Xanthotrich) e marmelada amarela (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como abelha euglossa (Euglossa bazinga) e as mamangavas (Bombus terrestris).</p>
-            <img src="./images/abelhas.png" alt="" class="horizontal">
+            <img class="horizontal" src="images/abelhas.png">
+            <img class=vertical src="images/abelhassemferrao2.png">
         </div>
     </div>
     <button class="carrossel-btn" id="anterBtn">Previous</button>
