change footer content

--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
     <a target="_blank" href="#" class="agendamento"><img src="./images/agendar 2.png" alt="agendamento"></a>
     </div> 
     <div class="agendar2">
-        <br><br> 
     <div id="vis-cont1"> 
         <img src="./images/logo.svg" alt="Missão Ambiental" class="logo"> 
         <p class="enderecos">|Rua Moreira de Godói, 01 - <br> 
@@ -156,16 +155,19 @@
         missaoambiental.org@gmail.com<br> 
         <br> 
         |(11) 96677-6565</p> 
+        <footer class="rodape-final">
+            <div class="lista-footer">
+                <ul class="lista-footer-li">
+                    Quick Links
+                    <li>Home</li>
+                    <li>Our Space</li>
+                    <li>Projetos</li>
+                    <li>Conteúdos</li>
+                    <li>Contatos</li>
+                </ul>
+            </div>
     </div>
-    <div class="termos">
-        <p class="uso">Termos de Uso</p>
     </div>
-    <div class="creditos">
-        <p class="termos">Créditos</p>
-        <p class="freepick">- <a href="https://br.freepik.com/vetores-gratis/instagram-icone-novo_954290.htm#query=instagram&position=4&from_view=search&track=sph" class="free-link">Freepick</a></p>
-    </div>
-    <br> <br> <br>
-    <p id="copy">Copyright © 2017 Missão Ambiental, todos os direitos reservados.</p>
     </div>
     </div>
     <div class="menu-overlay"></div>
