add href to footer

--- a/index.html
+++ b/index.html
@@ -158,14 +158,23 @@
         <footer class="rodape-final">
             <div class="lista-footer">
                 <ul class="lista-footer-li">
-                    Quick Links
-                    <li>Home</li>
-                    <li>Our Space</li>
-                    <li>Projetos</li>
-                    <li>Conteúdos</li>
-                    <li>Contatos</li>
+                    <li style="font-size: x-large; text-decoration: none;">Quick-Links</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#voluntario">Voluntário</a></li>
+                    <li><a href="#espaco">Nosso Espaço</a></li>
+                    <li><a href="#equipe">Conteúdos</a></li>
+                    <li><a href="#vis-cont1">Contatos</a></li>
                 </ul>
             </div>
+        </footer>
+        <div class="paragrafo-Termos">
+            <p>Termos de Uso</p>
+            <div class="creditos">
+                <p>Créditos</p>
+                <p>Freepik</p>
+                <p><a href="https://br.freepik.com/vetores-gratis/instagram-icone-novo_954290.htm#query=instagram&position=4&from_view=search&track=sph">Imagem de ibrandify</a> no Freepik</p>
+            </div>
+        </div>
     </div>
     </div>
     </div>
