Correction of sintax on projetos

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="row carrossel-item">
             <h1>HORTA EDUCATIVA COMUNITÁRIA:</h1>
             <p class="col-5 carrossel-texto">  A horta educativa comunitária foi idealizada para proporcionar experiências sensoriais, alimentação orgânica e dinamismo. É uma horta suspensa confeccionada com caixas de isopor e mesas de madeiras remontadas de paletes. A terra e o substrato é uma produção orgânica do espaço oriundo da compostagem comunitária.</p>
-            <p class="col-5 carrossel-texto">Entre as hortaliças produzidas nas caixas estão vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló. feijão preto, erva cidreira, jambu, coentro-selvagem, entre outros.</p>
+            <p class="col-5 carrossel-texto">Entre as hortaliças produzidas nas caixas estão vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló, feijão preto, erva cidreira, jambu, coentro-selvagem, entre outros.</p>
             <img class="horizontal" src="images/horta.png">
             <img class="vertical" src="images/horta123.png">
         </div>
