--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <p class="cont-espaco">Para Agendar uma visita, clique no ícone abaixo</p> 
     <a target="_blank" href="#" class="agendamento"><img src="./images/agendar 2.png" alt="agendamento"></a>
     </div> 
-    <div class="agendar2">
+    <footer class="agendar2">
     <div id="vis-cont1"> 
         <img src="./images/logo.svg" alt="Missão Ambiental" class="logo"> 
         <p class="enderecos">|Rua Moreira de Godói, 01 - <br> 
@@ -155,7 +155,7 @@
         missaoambiental.org@gmail.com<br> 
         <br> 
         |(11) 96677-6565</p> 
-        <footer class="rodape-final">
+        <section class="rodape-final">
             <div class="lista-footer">
                 <ul class="lista-footer-li">
                     <li style="font-size: x-large; text-decoration: none;">Quick-Links</li>
@@ -166,7 +166,7 @@
                     <li><a href="#vis-cont1">Contatos</a></li>
                 </ul>
             </div>
-        </footer>
+        </section>
         <div class="paragrafo-Termos">
             <p>Termos de Uso</p>
             <div class="creditos">
@@ -176,7 +176,7 @@
             </div>
         </div>
     </div>
-    </div>
+    </footer>
     </div>
     </div>
     <div class="menu-overlay"></div>
