--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
                 <p><a href="https://br.freepik.com/vetores-gratis/instagram-icone-novo_954290.htm#query=instagram&position=4&from_view=search&track=sph">Imagem de ibrandify</a> no Freepik</p>
             </div>
         </div>
+        <div class="paragrafo-Termos">
+            <p>Estatísticas do site</p>
+            <div class="creditos">
+                <p>O site foi visitado <span class="website-counter"></span> vezes.</p>
+                <button id="reset"></button>
+            </div>
+        </div>
     </div>
     </footer>
     </div>
