Changed quick links a bit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <main class="inicio">
-    <header class="topo">
+    <header class="topo" id="cima">
         <a href="index.html" class="logo-amb"><img src="images/logo-amb.svg">Missão Ambiental</a>
         <button aria-expanded="false" aria-label="menu" class="icone-menu menu-layout">☰</button>
         <nav class="cabecalho">
@@ -164,10 +164,10 @@
             <div class="lista-footer">
                 <ul class="lista-footer-li">
                     <li style="font-size: x-large; text-decoration: none;">Quick-Links</li>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#cima">Home</a></li>
                     <li><a href="#voluntario">Voluntário</a></li>
                     <li><a href="#espaco">Nosso Espaço</a></li>
-                    <li><a href="#equipe">Conteúdos</a></li>
+                    <li><a href="#equipe">Equipe</a></li>
                     <li><a href="#vis-cont1">Contatos</a></li>
                 </ul>
             </div>
