an attempt of adding a mean for statistics

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
             <div class="creditos">
                 <p>O site foi visitado <span class="website-counter"></span> vezes.</p>
                 <button id="reset"></button>
+                <!-- <p>A média de tempo gasto no site são <span class="website-mean"></span> .</p> -->
             </div>
         </div>
     </div>
