Added alt to every image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <main class="inicio">
     <header class="topo" id="cima">
-        <a href="index.html" class="logo-amb"><img src="images/logo-amb.svg">Missão Ambiental</a>
+        <a href="index.html" class="logo-amb"><img src="images/logo-amb.svg" alt="Logo da Missão Ambiental">Missão Ambiental</a>
         <button aria-expanded="false" aria-label="menu" class="icone-menu menu-layout">☰</button>
         <nav class="cabecalho">
             <button type="button" class="icone-menu fechar-menu" aria-expanded="false" aria-label="Close">×</button>
@@ -37,7 +37,7 @@
                 <li><a href="#vis-cont1">Contatos</a></li>
                 <li class="acessibilidade2">
                     <a class="acessibilidade">
-                        <img src="images/acessibilidade.svg">
+                        <img src="images/acessibilidade.svg" alt="Símbolo de Acessibilidade">
                     </a>
                 </li>
             </ul>
@@ -56,13 +56,13 @@
         </div>
     </div> 
     <footer class="rodape-principal">
-        <a target="_blank" href="https://www.instagram.com/missao.ambiental/" class="instagram redes"><img src="./images/instagram 1.svg" alt="Instagram"></a>
-        <a target="_blank" href="https://www.facebook.com/missaoambiental.org/" class="facebook redes"><img src="./images/facebook 1.svg" alt="Facebook"></a>
-        <a target="_blank" href="https://linktr.ee/missaoambiental" class="linktree redes"><img src="images/Linktree.svg"></a>
+        <a target="_blank" href="https://www.instagram.com/missao.ambiental/" class="instagram redes"><img src="./images/instagram 1.svg" alt="Logo Instagram"></a>
+        <a target="_blank" href="https://www.facebook.com/missaoambiental.org/" class="facebook redes"><img src="./images/facebook 1.svg" alt="Logo Facebook"></a>
+        <a target="_blank" href="https://linktr.ee/missaoambiental" class="linktree redes"><img src="images/Linktree.svg" alt="Logo da Linktree"></a>
         <div class="mapa">
             <div class="mapa-icone">
                 <a target="_blank" href="https://maps.app.goo.gl/GbR9jx4g4LoP4dJ7A">
-                <img src="./images/mapa 1.svg" alt="Mapa">
+                <img src="./images/mapa 1.svg" alt="Logo do Google Maps">
                 </a>
              </div>
             <p>missaoambiental.org@gmail.com | Rua Moreira de Godói, 01 - Vila São José - São Paulo, SP | (11) 96677-6565
@@ -72,7 +72,7 @@
     </main>
     <div id="voluntario">
         <p class="voluntariar">Se você deseja se voluntariar e nos ajudar, clique no link abaixo:</p>
-        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe_r5UnINtsEyfoTkQUBshW4lwC5aIqGFsjzSh8NRTZDyoY7w/viewform?pli=1"><img class="voluntario-btn" src="images/voluntariado.svg" alt="Voluntário"></a>
+        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe_r5UnINtsEyfoTkQUBshW4lwC5aIqGFsjzSh8NRTZDyoY7w/viewform?pli=1"><img class="voluntario-btn" src="images/voluntariado.svg" alt="Link para se voluntariar"></a>
     </div>
     <div id="espaco">
         <p class="titulo">Nosso Espaço</p>
@@ -82,27 +82,27 @@
         <div class="row carrossel-item">
             <h1>ORQUIDÁRIO</h1>
             <p class="col-5 carrossel-texto">O orquidário é um projeto desenvolvido em parceria com o Ohquidea que busca resgatar orquídeas e replantá-las em outros espaços. Dessa maneira, o orquidário da Missão Ambiental foi estruturado para receber as orquídeas descartadas. Entre as espécies destacam a Wanda, Cymbidium, Cattleya e Phalaenopsis.</p>
-            <img src="./images/jardim.png" alt="" class="horizontal">
-            <img class="vertical"src="images/blueberry-2686266_1280 1.png">
+            <img src="./images/jardim.png" alt="Jardim de orquideas" class="horizontal">
+            <img class="vertical"src="images/blueberry-2686266_1280 1.png" alt="Árvore do Orquidário">
         </div>
         <div class="row carrossel-item">
             <h1>OFICINAS DE EDUCAÇÃO AMBIENTAL</h1>
             <p class="col-5 carrossel-texto">As oficinas de educação ambiental são momentos organizados para expor, discutir e sensibilizar as pessoas sobre as temáticas relacionadas ao meio ambiente. Entre as oficinas foram realizadas sobre PANCs – Plantas Alimentícias Não Convencionais, ninho-isca para abelhas nativas sem ferrão, orquídeas.</p>
-            <img class="horizontal" src="images/oficina.png">
-            <img class="vertical" src="images/oficinasvertical.png">
+            <img class="horizontal" src="images/oficina.png" alt="Roda de voluntários com o intuito de disutir">
+            <img class="vertical" src="images/oficinasvertical.png" alt="Roda de voluntários em outro ângulo">
         </div>
         <div class="row carrossel-item">
             <h1>CAPTAÇÃO DE ÁGUA DE CHUVA:</h1>
             <p class="col-5 carrossel-texto">O sistema de captação de água pluvial foi implantado pelo parceiro Edison Urbano da Sempre Sustentável com viés de reaproveitar a água de chuva coletada pelo beiral do vizinho. A água fica armazenada na bombona de 200 L e o excesso é direcionado para os canteiros de hortaliças. Além disso, é utilizado para lavar as mãos, rega da horta educativa comunitária e armanezado em recipientes plásticos.</p>
-            <img class="horizontal" src="images/captacao.png">
-            <img class="vertical" src="images/captacaoagua.png">
+            <img class="horizontal" src="images/captacao.png" alt="Barril de filtração de água">
+            <img class="vertical" src="images/captacaoagua.png" alt="Outro ângulo do barril de filtração de água">
         </div>
         <div class="row carrossel-item">
             <h1>HORTA EDUCATIVA COMUNITÁRIA:</h1>
             <p class="col-5 carrossel-texto">  A horta educativa comunitária foi idealizada para proporcionar experiências sensoriais, alimentação orgânica e dinamismo. É uma horta suspensa confeccionada com caixas de isopor e mesas de madeiras remontadas de paletes. A terra e o substrato é uma produção orgânica do espaço oriundo da compostagem comunitária.</p>
             <p class="col-5 carrossel-texto">Entre as hortaliças produzidas nas caixas estão vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló, feijão preto, erva cidreira, jambu, coentro-selvagem, entre outros.</p>
-            <img class="horizontal" src="images/horta.png">
-            <img class="vertical" src="images/horta123.png">
+            <img class="horizontal" src="images/horta.png" alt="Flor laranja">
+            <img class="vertical" src="images/horta123.png" alt="Horta">
         </div>
         <div class="row carrossel-item">
             <h1>COMPOSTAGEM</h1>
@@ -110,20 +110,20 @@
                 A compostagem termofílica é aquela que agrega maior número de pessoas para apoio, controle da quantidade de resíduos e da temperatura das leiras.
                 A compostagem em valetas é a mais utilizada e recomendada para áreas verdes compactadas. O resíduo orgânico é depositado em um buraco superficial e depois coberto em canteiros de árvores e vegetação que se deseja nutrir.
                 A vermicompostagem é a compostagem empregada em recipientes com ajuda das minhocas californianas (Eisenia fétida) para decomposição de resíduos orgânicos. O processo prevê a coleta de biofertilizante e reaproveitamento do composto líquido.</p>
-                <img class="horizontal" src="images/compostagem.png">
-                <img class="vertical" src="images/compostagem123.png">
+                <img class="horizontal" src="images/compostagem.png" alt="Equipe trabalhando no projeto de compostagem">
+                <img class="vertical" src="images/compostagem123.png" alt="Zoom no processo de compostagem">
         </div>
         <div class="row carrossel-item">
             <h1>ÁRVORES NATIVAS:</h1>
             <p class="col-5 carrossel-texto">Ao longo do período de 5 anos foram plantadas algumas espécies nativas de Mata Atlântica e Cerrado Paulista para reflorestamento da área degradada. Entre elas estão espécies como Jaracatiá (Jacaratia spinosa), Cambuci (Campomanesia phaea), Lobeira (Solanum lycocarpum), Araucária (Araucaria angustifolia), Pau Jacaré (Piptadenia gonoacantha), Bacupari (Garcinia gardneriana), Juçara (Euterpe edulis), Embaúba Prateada (Cecropia hololeuca), Cereja-do-Rio-Grande (Eugenia involucrata), Pitanga Preta (Eugenia uniflora), Cambucá (Plinia edulis), Embira-de-Sapo (Lonchocarpus muehlbergianus), Uvaia (Eugenia pyriformis), Jequitibá Branco (Cariniana estrellensis), Angico Vermelho (Anadenanthera macrocarpa) Ingá-do-Brejo (Inga uruguensis), Cabeludinha (Myrciaria glazioviana), entre outras.</p>
-            <img class="vertical" src="images/arvoresnativasdireita.png">
-            <img class="verticalarvore" src="images/arvoresnativas esquerda.png">
+            <img class="vertical" src="images/arvoresnativasdireita.png" alt="Muda pequena de árvore">
+            <img class="verticalarvore" src="images/arvoresnativas esquerda.png" alt="Planta com folhas vermelhas">
         </div>
         <div class="row carrossel-item">
             <h1>ABELHAS SEM FERRÃO</h1>
             <p class="col-5 carrossel-texto">A Missão Ambiental em parceria com o SOS Abelhas Sem Ferrão ajuda a preservar e conscientizar sobre as abelhas nativas. O espaço conta com diversas espécies de abelhas sem ferrão como mirim droryana (Plebeia droryana), jataí (Tetragonisca angustula), arapuá (Trigona spinipes), boca-de-sapo (Partamona helleri), mandaguari (Scaptotrigona Xanthotrich) e marmelada amarela (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como abelha euglossa (Euglossa bazinga) e as mamangavas (Bombus terrestris).</p>
-            <img class="horizontal" src="images/abelhas.png">
-            <img class=vertical src="images/abelhassemferrao2.png">
+            <img class="horizontal" src="images/abelhas.png" alt="Zoom nas abelhas">
+            <img class=vertical src="images/abelhassemferrao2.png" alt="Foco na colméia artificial">
         </div>
     </div>
     <button class="carrossel-btn" id="anterBtn">Previous</button>
@@ -132,28 +132,28 @@
     <div id="equipe">
         <p class="sub">Nossa Equipe</p>
     <div class="membro pos1">
-        <img src="./images/perfil 1.png" alt="Foto1">
+        <img src="./images/perfil 1.png" alt="Foto do primeiro membro da equipe PlaceHolder">
         <p class="nome">Nome</p>
         <p class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
     <div class="membro pos2">
-        <img src="./images/perfil 1.png" alt="Foto2">
+        <img src="./images/perfil 1.png" alt="Foto do segundo membro da equipe PlaceHolder">
         <p class="nome">Nome</p>
         <p class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
     <div class="membro pos3">
-        <img src="./images/perfil 1.png" alt="Foto3">
+        <img src="./images/perfil 1.png" alt="Foto do terceiro membro da equipe PlaceHolder">
         <p class="nome">Nome</p>
         <p class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
     <div id="agendar">
         <p class="titulo">Agende uma Visita</p> 
     <p class="cont-espaco">Para Agendar uma visita, clique no ícone abaixo</p> 
-    <a target="_blank" href="#" class="agendamento"><img src="./images/agendar 2.png" alt="agendamento"></a>
+    <a target="_blank" href="#" class="agendamento"><img src="./images/agendar 2.png" alt="Logo do Whatsapp, para poder agendar uma visita"></a>
     </div> 
     <footer class="agendar2">
     <div id="vis-cont1"> 
-        <img src="./images/logo.svg" alt="Missão Ambiental" class="logo"> 
+        <img src="./images/logo.svg" alt="Logo da Missão Ambiental" class="logo"> 
         <p class="enderecos">|Rua Moreira de Godói, 01 - <br> 
         Vila São José - <u>São</u> Paulo, SP<br> 
         <br> 
