--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </ul>
         </div>
     </header>
-    <div class="parte-esq">
+    <div class="parte-esq container-md">
         <div class="secao-texto">
         <p class="essa texto-inicial">Essa é a Missão Ambiental</p>
         <p class="missao texto-inicial">
