Added border to equipe

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </footer>
     </main>
     <div id="voluntario">
-        <p tabindex="17" class="voluntariar">Se você deseja se voluntariar e nos ajudar, clique no link abaixo:</p>
+        <p tabindex="17" class="voluntariar">Se você deseja se voluntariar e nos ajudar, <br> clique no link abaixo:</p>
         <a tabindex="18" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe_r5UnINtsEyfoTkQUBshW4lwC5aIqGFsjzSh8NRTZDyoY7w/viewform?pli=1"><img class="voluntario-btn" src="images/voluntariado.svg" alt="Link para se voluntariar"></a>
     </div>
     <div id="espaco">
@@ -136,16 +136,19 @@
         <p tabindex="55" class="nome">Nome</p>
         <p tabindex="56" class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
+    <br>
     <div class="membro pos2">
         <img tabindex="57" src="./images/perfil 1.png" alt="Foto do segundo membro da equipe PlaceHolder">
         <p tabindex="58" class="nome">Nome</p>
         <p tabindex="59" class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
+    <br>
     <div class="membro pos3">
         <img tabindex="60" src="./images/perfil 1.png" alt="Foto do terceiro membro da equipe PlaceHolder">
         <p tabindex="61" class="nome">Nome</p>
         <p tabindex="62" class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
+    <br>
     <div id="agendar">
         <p tabindex="63" class="titulo">Agende uma Visita</p> 
     <p tabindex="64" class="cont-espaco">Para Agendar uma visita, clique no ícone abaixo</p> 
