--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         </div>
     </header>
     <div class="parte-esq container-md">
-        <div class="secao-texto">
+        <div class="secao-texto row-md">
+            <div class="col-12">
         <p tabindex="8" class="essa texto-inicial">Essa é a Missão Ambiental</p>
         <p tabindex="9" class="missao texto-inicial">
             Reutilização.
@@ -55,6 +56,7 @@
         <p tabindex="11" class="cont-index">A Missão Ambiental é uma associação civil sem fins lucrativos que cria espaços de preservação e convivência para a comunidade de vida na Terra buscando garantir a otimização dos recursos ambientais com produção de alimentos e regeneração do solo, incentiva a participação dos moradores do entorno e busca parceiros locais para realizar suas atividades. Além disso, conta com um amplo espaço cedido pela iniciativa privada onde são desenvolvidas atividades de educação ambiental, horta comunitária, agroecologia, viveiro de mudas nativas para as ações de plantios, mutirões (sempre agendados e divulgados nas redes sociais), cursos e oficinas. Tem um quadro de voluntários e parceiros como: SOS Abelhas sem Ferrão, Sempre Sustentável, Escola Comunitária, OHquidea, Aquário de São Paulo, ICC (Instituto Cristovão Colombo), FUNSAI (Fundação Nossa Senhora Auxiliadora do Ipiranga), CADES Ipiranga (Conselho Regional do Meio Ambiente, Desenvolvimento Sustentável e Cultura de Paz da Subprefeitura Ipiranga), Muda Ipiranga, entre outros.</p>
         </div>
     </div> 
+    </div>
     <footer class="rodape-principal">
         <a tabindex="12" target="_blank" href="https://www.instagram.com/missao.ambiental/" class="instagram redes"><img src="./images/instagram 1.svg" alt="Logo Instagram"></a>
         <a tabindex="13" target="_blank" href="https://www.facebook.com/missaoambiental.org/" class="facebook redes"><img src="./images/facebook 1.svg" alt="Logo Facebook"></a>
