--- a/index.html
+++ b/index.html
@@ -83,49 +83,48 @@
         <p tabindex="21">Nosso Espaço</p>
         <div class="row carrossel-item">
             <h1 tabindex="22">ORQUIDÁRIO</h1>
-            <p tabindex="23" class="col-5 carrossel-texto"><b>O orquidário</b> é um projeto <b>desenvolvido em parceria com o Ohquidea</b> que <b>busca resgatar orquídeas</b> e <b>replantá-las em outros espaços</b>. Dessa maneira, o orquidário da Missão Ambiental foi <b>estruturado para receber as orquídeas descartadas</b>. Entre as espécies destacam a <b>Wanda, Cymbidium, Cattleya</b> e <b>Phalaenopsis</b>.</p>
-            <img tabindex="24" src="./images/jardim.png" alt="Jardim de orquideas" class="horizontal">
-            <img tabindex="25" class="vertical"src="images/blueberry-2686266_1280 1.png" alt="Árvore do Orquidário">
+            <p tabindex="23" class="col-sm-10 col-md-4 carrossel-texto"><b>O orquidário</b> é um projeto <b>desenvolvido em parceria com o Ohquidea</b> que <b>busca resgatar orquídeas</b> e <b>replantá-las em outros espaços</b>. Dessa maneira, o orquidário da Missão Ambiental foi <b>estruturado para receber as orquídeas descartadas</b>. Entre as espécies destacam a <b>Wanda, Cymbidium, Cattleya</b> e <b>Phalaenopsis</b>.</p>
+            <img tabindex="24" class="vertical col-sm-12 col-md-4 "src="images/blueberry-2686266_1280 1.png" alt="Árvore do Orquidário">
+            <img tabindex="25" src="./images/jardim.png" alt="Jardim de orquideas" class="horizontal col-sm-12 col-md-4">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="26">OFICINAS DE EDUCAÇÃO AMBIENTAL</h1>
-            <p tabindex="27" class="col-5 carrossel-texto"><b>As oficinas de educação</b> ambiental são <b>momentos organizados</b> para <b>expor, discutir</b> e <b>sensibilizar</b> as pessoas <b>sobre as temáticas relacionadas ao meio ambiente</b>. Entre as <b>oficinas foram realizadas sobre</b> PANCs – <b>Plantas Alimentícias Não Convencionais, ninho-isca para abelhas nativas sem ferrão, orquídeas</b>.</p>
-            <img tabindex="28" class="horizontal" src="images/oficina.png" alt="Roda de voluntários com o intuito de disutir">
-            <img tabindex="29" class="vertical" src="images/oficinasvertical.png" alt="Roda de voluntários em outro ângulo">
+            <p tabindex="27" class="col-sm-10 col-md-4 carrossel-texto"><b>As oficinas de educação</b> ambiental são <b>momentos organizados</b> para <b>expor, discutir</b> e <b>sensibilizar</b> as pessoas <b>sobre as temáticas relacionadas ao meio ambiente</b>. Entre as <b>oficinas foram realizadas sobre</b> PANCs – <b>Plantas Alimentícias Não Convencionais, ninho-isca para abelhas nativas sem ferrão, orquídeas</b>.</p>
+            <img tabindex="29" class="vertical col-sm-12 col-md-2" src="images/oficinasvertical.png" alt="Roda de voluntários em outro ângulo">
+            <img tabindex="28" class="horizontal col-sm-12 col-md-4" src="images/oficina.png" alt="Roda de voluntários com o intuito de disutir">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="30">CAPTAÇÃO DE ÁGUA DE CHUVA:</h1>
-            <p tabindex="31" class="col-5 carrossel-texto"><b>O sistema de captação de água pluvial</b> foi <b>implantado</b> pelo parceiro <b>Edison Urbano da Sempre Sustentável</b> com o objetivo de <b>reaproveitar a água de chuva</b> coletada pelo beiral do vizinho. <b>A água fica armazenada</b> na <b>bombona de 200L</b> e o excesso é <b>direcionado para os canteiros de hortaliças</b>. Além disso, é <b>utilizado</b> para <b>lavar as mãos, rega da horta educativa comunitária e armanezado em recipientes plásticos</b>.</p>
-            <img tabindex="32" class="horizontal" src="images/captacao.png" alt="Barril de filtração de água">
-            <img tabindex="33" class="vertical" src="images/captacaoagua.png" alt="Outro ângulo do barril de filtração de água">
+            <p tabindex="31" class="col-sm-10 col-md-4 carrossel-texto"><b>O sistema de captação de água pluvial</b> foi <b>implantado</b> pelo parceiro <b>Edison Urbano da Sempre Sustentável</b> com o objetivo de <b>reaproveitar a água de chuva</b> coletada pelo beiral do vizinho. <b>A água fica armazenada</b> na <b>bombona de 200L</b> e o excesso é <b>direcionado para os canteiros de hortaliças</b>. Além disso, é <b>utilizado</b> para <b>lavar as mãos, rega da horta educativa comunitária e armanezado em recipientes plásticos</b>.</p>
+            <img tabindex="32" class="vertical col-sm-12 col-md-4" src="images/captacaoagua.png" alt="Outro ângulo do barril de filtração de água">
+            <img tabindex="33" class="horizontal col-sm-12 col-md-4" src="images/captacao.png" alt="Barril de filtração de água">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="34">HORTA EDUCATIVA COMUNITÁRIA:</h1>
-            <p tabindex="35" class="col-5 carrossel-texto">  <b>A horta educativa comunitária</b> foi <b>idealizada</b> para <b>proporcionar experiências sensoriais, alimentação orgânica e dinamismo</b>. É uma horta suspensa <b>confeccionada</b> com <b>caixas de isopor</b> e <b>mesas de madeiras remontadas de paletes</b>. A terra e o substrato é uma produção orgânica do espaço oriundo da compostagem comunitária.</p>
-            <p tabindex="36" class="col-5 carrossel-texto"><b>Entre as hortaliças produzidas</b> nas caixas estão <b>vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló, feijão preto, erva cidreira, jambu, coentro-selvagem</b>, entre outros.</p>
-            <img tabindex="37" class="horizontal" src="images/horta.png" alt="Flor laranja">
-            <img tabindex="38" class="vertical" src="images/horta123.png" alt="Horta">
+            <p tabindex="35" class="col-sm-10 col-md-5 carrossel-textoo">  <b>A horta educativa comunitária</b> foi <b>idealizada</b> para <b>proporcionar experiências sensoriais, alimentação orgânica e dinamismo</b>. É uma horta suspensa <b>confeccionada</b> com <b>caixas de isopor</b> e <b>mesas de madeiras remontadas de paletes</b>. A terra e o substrato é uma produção orgânica do espaço oriundo da compostagem comunitária.<b>Entre as hortaliças produzidas</b> nas caixas estão <b>vagem, hortelã, manjericão, peixinho da horta, salsa japonesa, quiabo, serralha, vinagreira, melissa, cebolinha, erva doce, jiló, feijão preto, erva cidreira, jambu, coentro-selvagem</b>, entre outros.</p>
+            <img tabindex="38" class="vertical col-sm-12 col-md-4" src="images/horta123.png" alt="Horta">
+            <img tabindex="37" class="horizontal col-sm-12 col-md-4" src="images/horta.png" alt="Flor laranja">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="39">COMPOSTAGEM</h1>
-            <p tabindex="40" class="col-5 carrossel-texto">  <b>A Missão Ambiental destina seus resíduos orgânicos para a compostagem</b>. No espaço emprega-se <b>diferentes formas de compostagem</b>, sendo utlizadas a <b>vermicompostagem, compostagem termofílica, compostagem de valetas, compostagem de materiais secos e compostagem de mosca soldado negra</b>.
+            <p tabindex="40" class="col-sm-10 col-md-7 carrossel-texto">  <b>A Missão Ambiental destina seus resíduos orgânicos para a compostagem</b>. No espaço emprega-se <b>diferentes formas de compostagem</b>, sendo utlizadas a <b>vermicompostagem, compostagem termofílica, compostagem de valetas, compostagem de materiais secos e compostagem de mosca soldado negra</b>.
                 <b>A compostagem termofílica</b> é aquela que agrega maior número de pessoas para apoio, controle da quantidade de resíduos e da temperatura das leiras.
                 <b>A compostagem em valetas</b> é a mais utilizada e recomendada para áreas verdes compactadas. O resíduo orgânico é depositado em um buraco superficial e depois coberto em canteiros de árvores e vegetação que se deseja nutrir.
                 <b>A vermicompostagem</b> é a compostagem empregada em recipientes com ajuda das minhocas californianas (Eisenia fétida) para decomposição de resíduos orgânicos. O processo prevê a coleta de biofertilizante e reaproveitamento do composto líquido.</p>
-                <img tabindex="41" class="horizontal" src="images/compostagem.png" alt="Equipe trabalhando no projeto de compostagem">
-                <img tabindex="42" class="vertical" src="images/compostagem123.png" alt="Zoom no processo de compostagem">
+                <img tabindex="42" class="vertical-especiais col-sm-10 col-md-4" src="images/compostagem123.png" alt="Zoom no processo de compostagem">
+                <img tabindex="41" class="horizontal-especiais col-sm-10 col-md-4" src="images/compostagem.png" alt="Equipe trabalhando no projeto de compostagem">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="43">ÁRVORES NATIVAS:</h1>
-            <p tabindex="44" class="col-5 carrossel-texto"><b>Ao longo do período de 5 anos foram plantadas</b> algumas <b>espécies nativas</b> de <b>Mata Atlântica e Cerrado Paulista</b> para <b>reflorestamento da área degradada</b>. Entre elas estão espécies como <b>Jaracatiá</b> (Jacaratia spinosa), <b>Cambuci</b> (Campomanesia phaea), <b>Lobeira</b> (Solanum lycocarpum), <b>Araucária</b> (Araucaria angustifolia), <b>Pau Jacaré</b> (Piptadenia gonoacantha), <b>Bacupari</b> (Garcinia gardneriana), <b>Juçara</b> (Euterpe edulis), <b>Embaúba Prateada</b> (Cecropia hololeuca), <b>Cereja-do-Rio-Grande</b> (Eugenia involucrata), <b>Pitanga Preta</b> (Eugenia uniflora), <b>Cambucá</b> (Plinia edulis), <b>Embira-de-Sapo</b> (Lonchocarpus muehlbergianus), <b>Uvaia</b> (Eugenia pyriformis), <b>Jequitibá Branco</b> (Cariniana estrellensis), <b>Angico Vermelho</b> (Anadenanthera macrocarpa) <b>Ingá-do-Brejo</b> (Inga uruguensis), <b>Cabeludinha</b> (Myrciaria glazioviana), entre outras.</p>
-            <img tabindex="45" class="vertical" src="images/arvoresnativasdireita.png" alt="Muda pequena de árvore">
-            <img tabindex="46" class="verticalarvore" src="images/arvoresnativas esquerda.png" alt="Planta com folhas vermelhas">
+            <p tabindex="44" class="col-sm-10 col-md-7 carrossel-texto"><b>Ao longo do período de 5 anos foram plantadas</b> algumas <b>espécies nativas</b> de <b>Mata Atlântica e Cerrado Paulista</b> para <b>reflorestamento da área degradada</b>. Entre elas estão espécies como <b>Jaracatiá</b> (Jacaratia spinosa), <b>Cambuci</b> (Campomanesia phaea), <b>Lobeira</b> (Solanum lycocarpum), <b>Araucária</b> (Araucaria angustifolia), <b>Pau Jacaré</b> (Piptadenia gonoacantha), <b>Bacupari</b> (Garcinia gardneriana), <b>Juçara</b> (Euterpe edulis), <b>Embaúba Prateada</b> (Cecropia hololeuca), <b>Cereja-do-Rio-Grande</b> (Eugenia involucrata), <b>Pitanga Preta</b> (Eugenia uniflora), <b>Cambucá</b> (Plinia edulis), <b>Embira-de-Sapo</b> (Lonchocarpus muehlbergianus), <b>Uvaia</b> (Eugenia pyriformis), <b>Jequitibá Branco</b> (Cariniana estrellensis), <b>Angico Vermelho</b> (Anadenanthera macrocarpa) <b>Ingá-do-Brejo</b> (Inga uruguensis), <b>Cabeludinha</b> (Myrciaria glazioviana), entre outras.</p>
+            <img tabindex="45" class="vertical-especiais col-sm-12 col-md-6" src="images/arvoresnativasdireita.png" alt="Muda pequena de árvore">
+            <img tabindex="46" class="vertical-especiais col-sm-12 col-md-4" src="images/arvoresnativas esquerda.png" alt="Planta com folhas vermelhas">
         </div>
         <div class="row carrossel-item">
             <h1 tabindex="47">ABELHAS SEM FERRÃO</h1>
-            <p tabindex="48" class="col-5 carrossel-texto">A Missão Ambiental em <b>parceria</b> com o <b>SOS Abelhas Sem Ferrão</b> ajuda a <b>preservar e conscientizar sobre as abelhas nativas</b>. O espaço conta com <b>diversas espécies de abelhas sem ferrão</b> como <b>mirim droryana</b> (Plebeia droryana), <b>jataí</b> (Tetragonisca angustula), <b>arapuá</b> (Trigona spinipes), <b>boca-de-sapo</b> (Partamona helleri), <b>mandaguari</b> (Scaptotrigona Xanthotrich) e <b>marmelada amarela</b> (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como <b>abelha euglossa</b> (Euglossa bazinga) e as <b>mamangavas</b> (Bombus terrestris).</p>
-            <img tabindex="49" class="horizontal" src="images/abelhas.png" alt="Zoom nas abelhas">
-            <img tabindex="50" class=vertical src="images/abelhassemferrao2.png" alt="Foco na colméia artificial">
+            <p tabindex="48" class="col-sm-10 col-md-4 carrossel-texto">A Missão Ambiental em <b>parceria</b> com o <b>SOS Abelhas Sem Ferrão</b> ajuda a <b>preservar e conscientizar sobre as abelhas nativas</b>. O espaço conta com <b>diversas espécies de abelhas sem ferrão</b> como <b>mirim droryana</b> (Plebeia droryana), <b>jataí</b> (Tetragonisca angustula), <b>arapuá</b> (Trigona spinipes), <b>boca-de-sapo</b> (Partamona helleri), <b>mandaguari</b> (Scaptotrigona Xanthotrich) e <b>marmelada amarela</b> (Frieseomelitta varia). Além disso, contribuem para a diversidade as abelhas nativas solitárias como <b>abelha euglossa</b> (Euglossa bazinga) e as <b>mamangavas</b> (Bombus terrestris).</p>
+            <img tabindex="50" class="vertical col-sm-12 col-md-4" src="images/abelhassemferrao2.png" alt="Foco na colméia artificial">
+            <img tabindex="49" class="horizontal col-sm-12 col-md-4" src="images/abelhas.png" alt="Zoom nas abelhas">
         </div>
     </div>
     <button tabindex="51" class="carrossel-btn" id="anterBtn">Previous</button>
