name class to p inside mapa

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <img tabindex="15" src="./images/mapa 1.svg" alt="Logo do Google Maps">
                 </a>
              </div>
-            <p tabindex="16">missaoambiental.org@gmail.com | Rua Moreira de Godói, 01 - Vila São José - São Paulo, SP | (11) 96677-6565
+            <p class="paragrafo-mapa" tabindex="16">missaoambiental.org@gmail.com | Rua Moreira de Godói, 01 - Vila São José - São Paulo, SP | (11) 96677-6565
             </p>
         </div>
     </footer>
