feat: row and col for equipe self-align

--- a/index.html
+++ b/index.html
@@ -132,22 +132,26 @@
 
     <div id="equipe">
         <p tabindex="53" class="sub">Nossa Equipe</p>
-    <div class="membro pos1">
+        <div class="container text-center">
+            <div class="row" style="height: 1000px;">
+    <div class="membro pos1 col-md-4 align-self-start">
         <img tabindex="54" src="./images/perfil 1.png" alt="Foto do primeiro membro da equipe PlaceHolder">
         <p tabindex="55" class="nome">Nome</p>
         <p tabindex="56" class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
     <br>
-    <div class="membro pos2">
+    <div class="membro pos2 col-md-4 align-self-end">
         <img tabindex="57" src="./images/perfil 1.png" alt="Foto do segundo membro da equipe PlaceHolder">
         <p tabindex="58" class="nome">Nome</p>
         <p tabindex="59" class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
     </div>
     <br>
-    <div class="membro pos3">
+    <div class="membro pos3 col align-self-center">
         <img tabindex="60" src="./images/perfil 1.png" alt="Foto do terceiro membro da equipe PlaceHolder">
         <p tabindex="61" class="nome">Nome</p>
         <p tabindex="62" class="cont-espaco">uma descrição mais longa para ver como ficaria se a descrição fosse mais longa e estou enrolando para falar que essa descrição é mais longa.</p>
+    </div>
+    </div>
     </div>
     <br>
     <div id="agendar">
