change misleading text

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </footer>
     </main>
     <div id="voluntario">
-        <p tabindex="17" class="voluntariar">Se você deseja se voluntariar e nos ajudar, <br> clique no link abaixo:</p>
+        <p tabindex="17" class="voluntariar">Se você deseja se voluntariar e nos ajudar, <br> clique na imagem abaixo:</p>
         <a tabindex="18" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe_r5UnINtsEyfoTkQUBshW4lwC5aIqGFsjzSh8NRTZDyoY7w/viewform?pli=1"><img class="voluntario-btn" src="images/voluntariado.svg" alt="Link para se voluntariar"></a>
     </div>
     <div id="espaco">
