--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
     </footer>
     </main>
     <div id="voluntario">
-        <p tabindex="17" class="voluntariar">Se você deseja se voluntariar e nos ajudar, <br> clique no link abaixo:</p>
+        <p tabindex="17" class="voluntariar">Se você deseja se voluntariar e nos ajudar, <br> clique no ícone abaixo:</p>
         <a tabindex="18" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe_r5UnINtsEyfoTkQUBshW4lwC5aIqGFsjzSh8NRTZDyoY7w/viewform?pli=1"><img class="voluntario-btn" src="images/voluntariado.svg" alt="Link para se voluntariar"></a>
     </div>
+    <br> <br> <br>
     <div id="espaco">
         <p tabindex="19" class="titulo">Nosso Espaço</p>
     <div class="container carrossel-container my-3">
@@ -195,6 +196,9 @@
             </div>
         </div>
     </div>
+    <a tabindex="12" target="_blank" href="https://www.instagram.com/missao.ambiental/" class="instagram redes"><img src="./images/instagram 1.svg" alt="Logo Instagram"></a>
+        <a tabindex="13" target="_blank" href="https://www.facebook.com/missaoambiental.org/" class="facebook redes"><img src="./images/facebook 1.svg" alt="Logo Facebook"></a>
+        <a tabindex="14" target="_blank" href="https://linktr.ee/missaoambiental" class="linktree redes"><img src="images/Linktree.svg" alt="Logo da Linktree"></a>
     </footer>
     </div>
     </div>
